# amore_ai_agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.bat
.github/workflows/: ci.yml
backend/: __init__.py
backend/agent/: __init__.py  laneige_agent.py  prompts.py  vector_store.py
backend/agent/tools/: __init__.py  analysis_tools.py  product_tools.py  ranking_tools.py
backend/api/: main.py
backend/chat/: __init__.py  chat_engine.py
backend/data/: __init__.py  loader.py
backend/db/: __init__.py  database.py  models.py  repository.py
backend/insights/: __init__.py  analyzer.py
backend/mock_engine/: __init__.py  ranking_engine.py
backend/rag/: __init__.py  vector_store.py
backend/ranking/: __init__.py  base.py  mock_provider.py  paapi_provider.py  service.py
backend/report/: __init__.py  excel_generator.py
backend/tests/: __init__.py  conftest.py  test_ground_truth.py  test_response_structure.py  test_tool_selection.py
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AIChat.tsx  Dashboard.tsx  Insights.tsx  RankingAnalysis.tsx  Reports.tsx  Settings.tsx  Sidebar.tsx  StatCard.tsx
frontend/src/services/: api.ts
scripts/: generate_demo_history.py
